# acp-client

./: .gitignore  Cargo.toml  README.md  start.sh
examples/: test_acp.rs
src/: error.rs  lib.rs
src/adapters/: codex.rs  gemini.rs  kiro.rs  mock.rs  mod.rs
src/application/: client.rs  mod.rs  session_service.rs
src/domain/: agent.rs  config.rs  message.rs  mod.rs  session.rs
src/infrastructure/: mod.rs
src/infrastructure/acp/: connection.rs  handler.rs  mod.rs  server_manager.rs
src/infrastructure/http/: mod.rs  server.rs  types.rs
